# ChangeLog for www-client/mozilla-firefox
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.312 2007/07/25 05:14:37 corsair Exp $

  25 Jul 2007; Markus Rothe <corsair@gentoo.org>
  mozilla-firefox-2.0.0.5.ebuild:
  Stable on ppc64; bug #185737

  24 Jul 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  mozilla-firefox-2.0.0.5.ebuild:
  Stable on sparc wrt security #185737

  24 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  mozilla-firefox-2.0.0.5.ebuild:
  Stable for HPPA (bug #185737).

  23 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.5.ebuild:
  alpha/ia64/x86 stable wrt security #185737

  23 Jul 2007; Christian Marie <pingu@gentoo.org>
  mozilla-firefox-2.0.0.4.ebuild, mozilla-firefox-2.0.0.5.ebuild:
  Adding -j1 option to emake which was originally added in bug #135420, removed
  in bug #181722 and are now being re-added for bug #182929 as it is still
  causing parallel compilation issues.

  21 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  -files/gentoo-default-prefs-r1.js, mozilla-firefox-2.0.0.5.ebuild:
  Revert the langpack thing, bug 182175

  19 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  files/icon/mozilla-firefox-1.5-unbranded.desktop,
  files/icon/mozilla-firefox-1.5.desktop, +files/gentoo-default-prefs-r1.js,
  mozilla-firefox-2.0.0.5.ebuild:
  Fix desktop files, bug 185869 and now it uses the langpack according to the
  locale, bug 182175

*mozilla-firefox-2.0.0.5 (18 Jul 2007)

  18 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  +mozilla-firefox-2.0.0.5.ebuild:
  Version bump wrt security #185737

  13 Jul 2007; Jeroen Roovers <jer@gentoo.org>
  mozilla-firefox-1.5.0.12.ebuild:
  Stable for HPPA (bug #183195).

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-2.0.0.4.ebuild:
  Bump patchset for issues in fbsd, patches provided by Roy Marples <uberlord
  at gentoo dot org>, bug 184099
