@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/mozilla-firefox-2.0.0.4.ebuild,v 1.12 2007/07/23 08:40:27 pingu Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/mozilla-firefox-2.0.0.4.ebuild,v 1.13 2007/07/26 16:24:15 wolf31o2 Exp $
 
 WANT_AUTOCONF="2.1"
 
@@ -277,8 +277,8 @@ pkg_postinst() {
 	elog "Please remember to rebuild any packages that you have built"
 	elog "against firefox. Some packages might be broken by the upgrade; if this"
 	elog "is the case, please search at http://bugs.gentoo.org and open a new bug"
-	elog "if one does not exist. Before filing any bugs, please move or remove ~/.mozilla"
-	elog "and test with a clean profile directory."
+	elog "if one does not exist. Before filing any bugs, please move or remove"
+	elog " ~/.mozilla and test with a clean profile directory."
 }
 
 pkg_postrm() {
