@@ -1,6 +1,12 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.312 2007/07/25 05:14:37 corsair Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/Attic/ChangeLog,v 1.313 2007/07/26 16:24:15 wolf31o2 Exp $
+
+  26 Jul 2007; Chris Gianelloni <wolf31o2@gentoo.org>
+  mozilla-firefox-2.0.0.2.ebuild, mozilla-firefox-2.0.0.3.ebuild,
+  mozilla-firefox-2.0.0.4.ebuild, mozilla-firefox-2.0.0.5.ebuild:
+  Cosmetic changes only... rearranged some of the post-merge output so it fits
+  properly on 80 columns.
 
   25 Jul 2007; Markus Rothe <corsair@gentoo.org>
   mozilla-firefox-2.0.0.5.ebuild:
